# tiferet-openapi

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
tiferet_openapi/: __init__.py
tiferet_openapi/contexts/: __init__.py  openapi.py  request.py
tiferet_openapi/contexts/tests/: test_openapi.py
tiferet_openapi/domain/: __init__.py  openapi.py  request.py
tiferet_openapi/domain/tests/: test_openapi.py  test_request.py
tiferet_openapi/events/: __init__.py  openapi.py
tiferet_openapi/events/tests/: test_openapi.py
tiferet_openapi/interfaces/: __init__.py  openapi.py
tiferet_openapi/mappers/: __init__.py  openapi.py
tiferet_openapi/mappers/tests/: test_openapi.py
tiferet_openapi/repos/: __init__.py  openapi.py
tiferet_openapi/repos/tests/: test_openapi.py
