[project]
name = "tiferet-openapi"
dynamic = ["version"]  # Mark version as dynamic
description = "A shared OpenAPI abstraction layer for the Tiferet Framework."
authors = [
    { name = "Andrew Shatz, Great Strength Systems", email = "andrew@greatstrength.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiferet>=2.0.0b1"
]

[project.urls]
Homepage = "https://github.com/greatstrength/tiferet-openapi"
Repository = "https://github.com/greatstrength/tiferet-openapi"
Download = "https://github.com/greatstrength/tiferet-openapi"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest_env>=1.1.5"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "tiferet_openapi",
    "tiferet_openapi.contexts",
    "tiferet_openapi.domain",
    "tiferet_openapi.events",
    "tiferet_openapi.interfaces",
    "tiferet_openapi.mappers",
    "tiferet_openapi.repos"
]

[tool.setuptools.dynamic]
version = { attr = "tiferet_openapi.__version__" }
